--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Exercise #3: Chnaging Picture</title>
+    <title>Exercise #3: Changing Picture</title>
     <style>
       .container{
           margin-top:200px;
